--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "scripts": {
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1",
+    "start": "node node_modules/http-server/bin/http-server -a localhost -p 8000 -c-1",
     "pretest": "npm install",
-    "test": "karma start karma.conf.js"
+    "test": "node node_modules/karma/bin/karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
